--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server.js localhost 8888"
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -27,6 +28,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:8888",
   "browserslist": {
     "production": [
       ">0.2%",
