--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eject": "react-scripts eject",
     "server": "nodemon server.js"
   },
+  "proxy": "http://localhost:8888",
   "eslintConfig": {
     "extends": [
       "react-app",
